# allen-mouse-connectivity

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: demo.py
openspec/changes/fix-critical-bugs/: design.md  proposal.md  tasks.md
openspec/changes/fix-critical-bugs/specs/bugfix-pipeline/: spec.md
openspec/changes/fix-critical-bugs/specs/bugfix-regression-tests/: spec.md
openspec/changes/fix-critical-bugs/specs/pipeline-performance/: spec.md
src/allen_mouse_connectivity/: __init__.py  cli.py  connectivity.py
tests/: test_smoke.py
